# cargo-deps

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
src/: color.rs  config.rs  dep.rs  error.rs  fmt.rs  graph.rs  lib.rs  macros.rs  main.rs  project.rs  util.rs
tests/: lib_test.rs
