[package]
authors = [
    "Kevin K. <kbknapp@gmail.com>",
    "Max New <maxsnew@gmail.com>",
    "Marcin S. <marcin.swieczkowski@gmail.com>",
]
categories = ["development-tools", "development-tools::cargo-plugins"]
description = "Cargo subcommand for building GraphViz DOT files of dependency graphs"
exclude = ["*.png"]
keywords = ["cargo", "subcommand", "deps", "dot", "graphviz"]
license = "MIT"
name = "cargo-deps"
readme = "README.md"
repository = "https://github.com/m-cat/cargo-deps.git"
version = "0.3.1"

edition = "2018"

[[bin]]
name = "cargo-deps"

[dependencies]
toml = "0.4.10"
clap = "2.32.0"
ansi_term = { version = "0.11.0", optional = true }

[features]
default = ["color"]
color = ["ansi_term"]
