[package]
authors = [
    "Marcin S. <marcin.swieczkowski@gmail.com>",
    "Kevin K. <kbknapp@gmail.com>",
    "Max New <maxsnew@gmail.com>",
]
categories = ["development-tools", "development-tools::cargo-plugins"]
description = "Cargo subcommand for building dependency graphs of Rust projects."
exclude = ["*.png"]
keywords = ["cargo", "subcommand", "deps", "dot", "graphviz"]
license = "MIT"
name = "cargo-deps"
readme = "README.md"
repository = "https://github.com/m-cat/cargo-deps.git"
version = "0.3.1"

edition = "2018"

[dependencies]
clap = "2.32.0"
toml = "0.4.10"
